--- a/index.html
+++ b/index.html
@@ -2,7 +2,17 @@
 <head>
 </head>
 <body>
-<a rel="me" href="https://techhub.social/@krbailey">Mastodon</a>
+<ul>
+  <li>
+    <a href="https://github.com/krb70">github</a>
+  </li>
+  <li>
+    <a href="https://www.linkedin.com/in/kendallbailey/">LinkedIn</a>
+  </li>
+  <li>
+    <a rel="me" href="https://techhub.social/@krbailey">Mastodon</a>
+  </li>
+</ul>
 </body>
 </html>
 
